Layout fixes
fixed layout issue on email templates module
fixed positioning issue with quick links on dashboard

--- a/system/cms/themes/pyrocms/css/workless/application.css
+++ b/system/cms/themes/pyrocms/css/workless/application.css
@@ -703,8 +703,8 @@ section.item > .content {
 }
 
 #quick_links ul li {
-	margin:0 10px 0 15px;
-	display:inline;
+	margin:0 10px 10px 0px;
+	display:inline-block;
 }
 
 #quick_links ul li a {
